--- a/package/assets/AlsSerialize.astro
+++ b/package/assets/AlsSerialize.astro
@@ -1,6 +1,6 @@
 ---
-import { userConfig } from "virtual:astro-als/internal/user-config"
 import { getAlsData } from "als:astro";
+import { userConfig } from "virtual:astro-als/internal/user-config";
 ---
 
 <script
