--- a/playground/src/layouts/Layout.astro
+++ b/playground/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import AlsSerialize from "astro-als/AlsSerialize.astro"
+import AlsSerialize from "astro-als/AlsSerialize.astro";
 
 interface Props {
 	title: string;
